# tronic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  release.toml
examples/: listener.rs  send_trx.rs  usdt_with_multisig.rs
proto/google/api/: http.proto
proto/tron/: English version of TRON Protocol document.md
proto/tron/api/: api.proto
proto/tron/core/: Tron.proto
proto/tron/core/contract/: smart_contract.proto
src/: client.rs  error.rs  extractor.rs  lib.rs  signer.rs  utility.rs
src/client/: builder.rs  mod.rs  pending.rs
src/contracts/: mod.rs  trc20.rs
src/contracts/token/: mod.rs  usdt.rs
src/domain/: account.rs  address.rs  block.rs  contract.rs  estimate.rs  mod.rs  permission.rs  transaction.rs  trx.rs
src/domain/contract/: methods.rs  mod.rs  ser.rs
src/listener/: block_cache.rs  mod.rs  subscriber.rs
src/listener/subscriber/: filters.rs  mod.rs  tx_sub.rs
src/protocol/: contracts_conversions.rs  google.api.rs  mod.rs  protocol.rs
src/provider/: grpc.rs  http.rs  mock.rs  mod.rs
src/providers/: grpc.rs
tests/api/: account.rs  contract.rs  mod.rs  multisig.rs
tests/assets/: MyCoin.json
tests/conf/: tron.conf
tests/helpers/: mod.rs  node.rs
