[package]
name = "tronic"
version = "0.1.1"
edition = "2024"
description = "A modular, async-first Rust client for the Tron blockchain."
authors = ["39george <39george.enjoy@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/39george/tronic"
homepage = "https://github.com/39george/tronic"
documentation = "https://docs.rs/tronic"
keywords = ["tron", "blockchain", "smart-contracts", "grpc", "rust"]
categories = ["cryptography", "network-programming", "api-bindings", "asynchronous", "finance"]
exclude = ["/.github", "/.gitignore", "/examples", "/target", "Makefile", "*.sh"]

[dependencies]
# Base dependencies
tokio = { version = "1.46" }
futures = { version = "0.3" }
http = "1.3"
tower = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC
tonic = { git = "https://github.com/hyperium/tonic" }
prost = "0.14"
prost-types = "0.14"

# Misc
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
time = { version = "0.3", features = ["local-offset", "macros", "parsing"] }
bon = "3.6"
derivative = "2.2"
bitvec = "1.0"
strum = "0.27"
strum_macros = "0.27"

# Crypto
k256 = "0.13"
hex = "0.4"
secrecy = "0.10"
sha2 = "0.10"
sha3 = "0.10"
bs58 = { version = "0.5", features = ["check"] }
alloy-sol-types = "1.2"
alloy-sol-macro = "1.2"
alloy-primitives = "1.2"
rand = "0.9"

# Telemetry
tracing = "0.1"

[[example]]
name = "listener"
path = "examples/listener.rs"

[[example]]
name = "tmp"
path = "examples/tmp.rs"

[dev-dependencies]
tokio = { version = "1.46", features = ["signal"] }

[build-dependencies]
tonic-build = "0.13"
